Bug 832120 cursor: auto; should be cursor: text; on editable element r=dbaron